# pizza-box

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  compose.yaml  docker-stack.yaml  nginx.conf  pyproject.toml  setup.sh
.github/workflows/: deploy.yaml
alembic/: env.py
alembic/versions/: 11e0922fbfcb_add_featured_field_in_pizza.py  1a88bd5f636b_change_currency_related_fields_from_.py  260e0c745508_pizza_crust_size_topping_models.py  276cb9e851a0_add_unique_default_address_per_user_.py  2a10cf9c9dd9_change_on_delete_to_set_null_in_address_.py  36e049d461ad_change_payment_method_enum.py  5156149ad8f1_add_address_model.py  5b3a989163cf_apply_on_delete_cascade_restrict_updates.py  62aff7beb847_add_payments_model.py  abac33fb7130_date_time_timezone_bug_fix_on_expires_.py  b1a4744053b7_init.py  b43b27b7ff5b_add_notifications_table.py  b44aa415af8a_add_order_models.py  b73b2a404fb7_init.py  ea5f74139c0a_change_float_to_decimal_in_menu_models.py  f8dbdc3eb681_cart_and_cart_item_models.py
app/: main.py
app/address/: constants.py  model.py  routes.py  schema.py  service.py
app/auth/: dependencies.py  model.py  routes.py  schema.py  service.py  utils.py
app/cart/: constants.py  dependencies.py  model.py  routes.py  schema.py  service.py  utils.py
app/core/: celery_app.py  config.py  database.py  exception_handlers.py  exceptions.py  redis.py
app/libs/: bucket.py  fastmail.py  razorpay.py
app/menu/: model.py  routes.py  schema.py  service.py
app/notifications/: events.py  manager.py  model.py  redis_pubsub.py  (+3 more)
nginx/: nginx.conf
(+17 files in other folders)
